--- a/admin/views/products/product-add.html
+++ b/admin/views/products/product-add.html
@@ -58,6 +58,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="../../../js/config.js"></script>
     <script>
         // Load the Sidebar, Header, and Footer
         document.addEventListener('DOMContentLoaded', function() {
@@ -100,7 +101,7 @@
             formData.append('description', newProduct.description); // Add description to formData
             formData.append('image', newProduct.image);
 
-            fetch('http://localhost:3000/api/products', {
+            fetch(`${config.API_URL}/api/products`, {
                 method: 'POST',
                 body: formData
             })
