--- a/admin/views/users/user-detail.html
+++ b/admin/views/users/user-detail.html
@@ -34,6 +34,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="../../../js/config.js"></script>
     <script>
         // Load the Sidebar, Header, and Footer
         document.addEventListener('DOMContentLoaded', function() {
@@ -58,7 +59,7 @@
             loadUserDetails(userId);
 
             function loadUserDetails(userId) {
-                fetch(`/api/users/${userId}`)
+                fetch(`${config.API_URL}/api/users/${userId}`)
                     .then(response => response.json())
                     .then(data => {
                         const userDetails = document.getElementById('user-details');
