--- a/admin/views/users/user-edit.html
+++ b/admin/views/users/user-edit.html
@@ -53,6 +53,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="../../../js/config.js"></script>
     <script>
         // Load the Sidebar, Header, and Footer
         document.addEventListener('DOMContentLoaded', function() {
@@ -82,7 +83,7 @@
             });
 
             function loadUserDetails(userId) {
-                fetch(`/api/users/${userId}`)
+                fetch(`${config.API_URL}/api/users/${userId}`)
                     .then(response => response.json())
                     .then(data => {
                         document.getElementById('user-id').value = data._id;
@@ -100,7 +101,7 @@
                     role: document.getElementById('user-role').value
                 };
 
-                fetch(`/api/users/${userId}`, {
+                fetch(`${config.API_URL}/api/users/${userId}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
