--- a/admin/views/users/user.html
+++ b/admin/views/users/user.html
@@ -44,6 +44,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="../../../js/config.js"></script>
     <script>
         // Load the Sidebar, Header, and Footer
         document.addEventListener('DOMContentLoaded', function() {
@@ -66,7 +67,7 @@
             loadUsers();
 
             function loadUsers() {
-                fetch('/api/users')
+                fetch(`${config.API_URL}/api/users`)
                     .then(response => response.json())
                     .then(data => {
                         const usersTableBody = document.getElementById('users-table-body');
@@ -94,7 +95,7 @@
 
         function deleteUser(userId) {
             if (confirm('Are you sure you want to delete this user?')) {
-                fetch(`/api/users/${userId}`, {
+                fetch(`${config.API_URL}/api/users/${userId}`, {
                     method: 'DELETE'
                 })
                 .then(response => response.json())
