--- a/admin/views/analytics/dashboard.html
+++ b/admin/views/analytics/dashboard.html
@@ -90,6 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script src="../../../js/config.js"></script>
+    <script src="../../js-2/siderbar.js"></script>
     <script>
         // Function to dynamically load the HTML content
         function loadHTMLContent(containerId, filePath) {
